--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
 
+    h3 {
+        text-align: center;
+    }
+
+    img{
+        //largura
+        width: 200px;
+        align-self: center;
+        margin: auto;
+        display: block;
+        padding: 10px;
+    }
 }
